syntax = "proto3";
package sac.v1;
option go_package = "g.echo.tech/dev/sac/gen/sac/v1;sacv1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "sac/v1/common.proto";

message CreateSessionRequest {
  int64 agent_id = 1;
}

message CreateSessionResponse {
  string session_id = 1;
  string status = 2;
  string pod_name = 3;
  google.protobuf.Timestamp created_at = 4;
  bool is_new = 5;
}

message Session {
  int64 id = 1;
  int64 user_id = 2;
  int64 agent_id = 3;
  string session_id = 4;
  string pod_name = 5;
  string pod_ip = 6;
  string status = 7;
  google.protobuf.Timestamp last_active = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message UserSessionListResponse {
  repeated Session sessions = 1;
}

message GetSessionRequest {
  string session_id = 1;
}

service SessionService {
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse) {
    option (google.api.http) = { post: "/api/sessions", body: "*" };
  }
  rpc ListSessions(Empty) returns (UserSessionListResponse) {
    option (google.api.http) = { get: "/api/sessions" };
  }
  rpc GetSession(GetSessionRequest) returns (Session) {
    option (google.api.http) = { get: "/api/sessions/{session_id}" };
  }
  rpc DeleteSession(GetSessionRequest) returns (SuccessMessage) {
    option (google.api.http) = { delete: "/api/sessions/{session_id}" };
  }
}
